# tft-fabiiz

./: README.md
tft-companion/: README.md  pyproject.toml  requirements.txt
tft-companion/src/tft_companion/: __init__.py  __main__.py  app.py  config.py  main.py
tft-companion/src/tft_companion/core/: economy.py  models.py  odds.py  recommender.py
tft-companion/src/tft_companion/data/: cache.py
tft-companion/src/tft_companion/data/local/: comps.sample.json  shop_odds.set17.json
tft-companion/src/tft_companion/data/providers/: base.py  cdragon.py  comps.py
tft-companion/src/tft_companion/game/: lcu.py  live_client.py  manual.py  ocr.py  source.py
tft-companion/src/tft_companion/services/: bus.py  game_tracker.py  static_data.py  workers.py
tft-companion/src/tft_companion/ui/: main_window.py
tft-companion/src/tft_companion/ui/overlay/: overlay_window.py
tft-companion/src/tft_companion/ui/widgets/: board_planner.py  comp_browser.py  economy_panel.py  odds_panel.py  recommendations_panel.py
tft-companion/tests/: test_economy_and_recommender.py  test_odds.py
