[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tft-companion"
version = "0.1.0"
description = "Companion de análisis y planificación de estrategia para Teamfight Tactics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
]

[project.optional-dependencies]
ocr = ["mss>=9", "pytesseract>=0.3", "Pillow>=10"]
dev = ["pytest>=8"]

[project.scripts]
tft-companion = "tft_companion.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tft_companion = ["data/local/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
